<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Encuesta">

    <TextView
        android:id="@+id/lblEncuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/encuesta" />

    <TextView
        android:id="@+id/lblPregunta1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/pregunta1" />

    <EditText
        android:id="@+id/txtPregunta1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lblPregunta2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/pregunta2" />

    <CheckBox
        android:id="@+id/cbFutbol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/futbol" />

    <CheckBox
        android:id="@+id/cbTennis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tennis" />

    <CheckBox
        android:id="@+id/cbBasketball"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/basketball" />

    <TextView
        android:id="@+id/lblPregunta3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/pregunta3" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="83dp">

        <RadioButton
            android:id="@+id/rbSi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/si" />

        <RadioButton
            android:id="@+id/rbNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </RadioGroup>

    <Button
        android:id="@+id/btnEnviarEncuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="enviarFormularioRespuestas"
        android:text="@string/enviarrespuestas" />

    <TextView
        android:id="@+id/lblT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/lblN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/lblNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible" />

</LinearLayout>