<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Resumen">

    <ImageView
        android:id="@+id/imgResumen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/download" />

    <TextView
        android:id="@+id/lblUsuarioResumen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/bienvenido" />

    <TextView
        android:id="@+id/lblUsuarioConectado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/bienvenido" />

    <TextView
        android:id="@+id/lblTotalPago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        tools:text="@string/totalPago" />

    <TextView
        android:id="@+id/lblResultadoEnc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/respuestas" />

    <TextView
        android:id="@+id/lblRespuesta1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pregunta1" />

    <TextView
        android:id="@+id/lblResultadoP1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/lblRespuesta2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pregunta2" />

    <TextView
        android:id="@+id/lblResultadoP21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblResultadoP22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblResultadoP23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblRespuesta3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pregunta3" />

    <TextView
        android:id="@+id/lblResultadoP3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

</LinearLayout>